// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bottom-aligned, default scales 1`] = `
"<g class=\\"highlights\\"></g>
<g class=\\"axis xAxis axis baseline\\" fill=\\"none\\" font-size=\\"10\\" font-family=\\"sans-serif\\" text-anchor=\\"middle\\" transform=\\"transform(0, 277)\\">
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(70, 0)\\">
    <line stroke=\\"#000\\" y2=\\"15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"18\\" dy=\\"0.71em\\" id=\\"webFrameMDefaultxLabel\\">1975</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(142, 0)\\">
    <line stroke=\\"#000\\" y2=\\"15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"18\\" dy=\\"0.71em\\" id=\\"webFrameMDefaultxLabel\\">80</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(213, 0)\\">
    <line stroke=\\"#000\\" y2=\\"15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"18\\" dy=\\"0.71em\\" id=\\"webFrameMDefaultxLabel\\">85</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(284, 0)\\">
    <line stroke=\\"#000\\" y2=\\"15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"18\\" dy=\\"0.71em\\" id=\\"webFrameMDefaultxLabel\\">90</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(355, 0)\\">
    <line stroke=\\"#000\\" y2=\\"15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"18\\" dy=\\"0.71em\\" id=\\"webFrameMDefaultxLabel\\">95</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(426, 0)\\">
    <line stroke=\\"#000\\" y2=\\"15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"18\\" dy=\\"0.71em\\" id=\\"webFrameMDefaultxLabel\\">2000</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(498, 0)\\">
    <line stroke=\\"#000\\" y2=\\"15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"18\\" dy=\\"0.71em\\" id=\\"webFrameMDefaultxLabel\\">05</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(569, 0)\\">
    <line stroke=\\"#000\\" y2=\\"15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"18\\" dy=\\"0.71em\\" id=\\"webFrameMDefaultxLabel\\">10</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(640, 0)\\">
    <line stroke=\\"#000\\" y2=\\"15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"18\\" dy=\\"0.71em\\" id=\\"webFrameMDefaultxLabel\\">15</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(668, 0)\\">
    <line stroke=\\"#000\\" y2=\\"15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"18\\" dy=\\"0.71em\\" id=\\"webFrameMDefaultxLabel\\">17</text>
  </g>
</g>
<g class=\\"axis xAxis axis baseline\\" fill=\\"none\\" font-size=\\"10\\" font-family=\\"sans-serif\\" text-anchor=\\"middle\\" transform=\\"transform(0, 277)\\">
  <path class=\\"domain\\" stroke=\\"#000\\" d=\\"M0.5,6V0.5H675.5V6\\"></path>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(14, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(28, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(42, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(56, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(70, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(85, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(99, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(113, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(127, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(142, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(156, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(170, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(184, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(199, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(213, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(227, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(241, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(256, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(270, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(284, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(298, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(312, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(327, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(341, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(355, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(369, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(384, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(398, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(412, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(426, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(441, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(455, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(469, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(483, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(498, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(512, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(526, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(540, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(555, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(569, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(583, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(597, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(611, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(626, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(640, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(654, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(668, 0)\\">
    <line stroke=\\"#000\\" y2=\\"6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"9\\" dy=\\"0.71em\\"></text>
  </g>
</g>"
`;

exports[`top-aligned, default scales 1`] = `
"<g class=\\"highlights\\"></g>
<g class=\\"axis xAxis axis baseline\\" fill=\\"none\\" font-size=\\"10\\" font-family=\\"sans-serif\\" text-anchor=\\"middle\\">
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(70, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-18\\" dy=\\"0em\\" id=\\"webFrameMDefaultxLabel\\">1975</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(142, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-18\\" dy=\\"0em\\" id=\\"webFrameMDefaultxLabel\\">80</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(213, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-18\\" dy=\\"0em\\" id=\\"webFrameMDefaultxLabel\\">85</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(284, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-18\\" dy=\\"0em\\" id=\\"webFrameMDefaultxLabel\\">90</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(355, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-18\\" dy=\\"0em\\" id=\\"webFrameMDefaultxLabel\\">95</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(426, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-18\\" dy=\\"0em\\" id=\\"webFrameMDefaultxLabel\\">2000</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(498, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-18\\" dy=\\"0em\\" id=\\"webFrameMDefaultxLabel\\">05</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(569, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-18\\" dy=\\"0em\\" id=\\"webFrameMDefaultxLabel\\">10</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(640, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-18\\" dy=\\"0em\\" id=\\"webFrameMDefaultxLabel\\">15</text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(668, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-15\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-18\\" dy=\\"0em\\" id=\\"webFrameMDefaultxLabel\\">17</text>
  </g>
</g>
<g class=\\"axis xAxis axis baseline\\" fill=\\"none\\" font-size=\\"10\\" font-family=\\"sans-serif\\" text-anchor=\\"middle\\">
  <path class=\\"domain\\" stroke=\\"#000\\" d=\\"M0.5,-6V0.5H675.5V-6\\"></path>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(14, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(28, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(42, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(56, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(70, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(85, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(99, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(113, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(127, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(142, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(156, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(170, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(184, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(199, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(213, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(227, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(241, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(256, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(270, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(284, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(298, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(312, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(327, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(341, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(355, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(369, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(384, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(398, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(412, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(426, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(441, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(455, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(469, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(483, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(498, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(512, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(526, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(540, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(555, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(569, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(583, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(597, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(611, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(626, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(640, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(654, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
  <g class=\\"tick\\" opacity=\\"1\\" transform=\\"transform(668, 0)\\">
    <line stroke=\\"#000\\" y2=\\"-6\\" id=\\"webFrameMDefaultxTick\\"></line><text fill=\\"#000\\" y=\\"-9\\" dy=\\"0em\\"></text>
  </g>
</g>"
`;
